update enroll process
